syntax = "proto3";

option go_package=".;pb";
package pb;


message TAppRet {
     int32 Code =1;
     string Msg = 2;
     bytes Data = 3;
}


